<resources>
    <string name="url_product">http://192.168.56.1:8084/Webservice-NongSanOnline/webresources/frontend/danhsachsanpham</string>
    <string name="url_news">http://192.168.56.1:8084/Webservice-NongSanOnline/webresources/frontend/danhsachtintuc</string>
    <string name="url_trading">http://192.168.56.1:8084/Webservice-NongSanOnline/webresources/frontend/danhsachmuaban</string>
    <string name="url_login">http://192.168.56.1:8084/Webservice-NongSanOnline/webresources/frontend/dangnhap</string>
    <string name="url_trick1">http://192.168.56.1:8084/Webservice-NongSanOnline/webresources/frontend/danhsachmeovatsanxuat</string>
    <string name="url_trick2">http://192.168.56.1:8084/Webservice-NongSanOnline/webresources/frontend/danhsachmeovatchebien</string>
    <string name="url_signup">http://192.168.56.1:8084/Webservice-NongSanOnline/webresources/frontend/dangky</string>
    <string name="app_name">Nông sản Online</string>
    <string name="activity_news">Tin tức Nông sản</string>
    <string name="activity_product">Sản phẩm Nông sản</string>
    <string name="activity_trick">Mẹo vặt Nông sản</string>
    <string name="activity_trading">Rao vặt Nông sản</string>
    <string name="activity_user">Người dùng</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Từ khóa tìm kiếm</string>
    <string name="tip_1">Vuốt từ trên xuống để Tải lại Dữ liệu</string>
    <string name="tip_2">Vuốt từ trái qua phải để Quay lại</string>
    <string name="add">Thêm</string>
    <string name="empty_view">Không có dữ liệu</string>
    <string name="no_internet_access">Không có kết nối Internet</string>
    <string name="required">Xin hãy nhập đầy đủ thông tin</string>
    <string name="password_error_1">Mật khẩu bạn nhập lại chưa chính xác</string>
    <string name="email_error">Email bạn nhập chưa chính xác</string>
    <string name="no_info_error">Vui lòng nhập đầy đủ Thông tin</string>
    <string name="login_error">Tên tài khoản bạn nhập chưa chính xác hoặc đã tồn tại</string>
    <string name="name_error">Tên tài khoản phải từ 5 đến 20 kí tự và không chứa kí tự đặc biệt</string>
    <string name="password_error">Mật tài khoản phải từ 6 đến 20 kí tự và không chứa kí tự đặc biệt</string>
    <string name="fullname_error">Bạn có chắc chắn đây là tên thật của bạn?</string>
    <string name="address_error">Xin hãy chắc chắn đây là địa chỉ chính xác của bạn</string>
    <string name="phone_error">Số điện thoại bạn nhập chưa chính xác, hãy chắc chắn rằng nó có thể sử dụng tại Việt Nam</string>
    <string name="publish_by">Đăng bởi: </string>
    <string name="readmore">Đọc tiếp</string>
    <string name="endoflist">Lên trên</string>
    <string name="vnd">VNĐ</string>
    <string name="address">Địa chỉ:</string>
    <string name="price">Giá:</string>
    <string name="updated_at">Cập nhật lúc:</string>
    <string name="region">Vùng miền:</string>
    <string name="test_des">Cà rốt là một loại cây có củ, thường có màu vàng cam, đỏ, vàng, trắng hay tía. Phần ăn được của cà rốt là củ, thực chất là rễ cái của nó, chứa nhiều tiền tố của vitamin A tốt cho mắt.Trong tự nhiên, nó là loại cây sống hai năm, phát triển một nơ chứa lá trong mùa xuân và mùa hè, trong khi đó vẫn tích lũy một lượng lớn đường trong rễ cái to mập, tích trữ năng lượng để ra hoa trong năm thứ hai. Thân cây mang hoa có thể cao tới 1 m (3 ft), với hoa tán chứa các hoa nhỏ màu trắng, sinh ra quả, được các nhà thực vật học gọi là quả nẻ</string>
    <string name="product_title_1">Sp đang giảm giá</string>
    <string name="product_title_2">Sp mới</string>
    <string name="product_title_3">Rau</string>
    <string name="product_title_4">Củ</string>
    <string name="product_title_5">Quả</string>
    <string name="product_title_6">Khác</string>
    <string name="target">Đối tượng:</string>
    <string name="trick_title_0">Tất cả</string>
    <string name="trick_title_1">Tin ngày hôm nay</string>
    <string name="trick_title_2">Tin đăng trong 3 ngày gần đây</string>
    <string name="trick_title_3">Tin đăng trong 7 ngày gần đây</string>
    <string name="trick_title_4">Tin đăng trong 30 ngày gần đây</string>
    <string name="result">kết quả</string>
    <string name="contact">Liên hệ</string>
    <string name="mail">Gửi tin nhắn</string>
    <string name="user_profile">Người đăng</string>
    <string name="trading_addmore">Nhập đầy đủ <b>Dữ liệu </b>để đăng Tin rao vặt</string>
    <string name="input_title_hint">Tiêu đề</string>
    <string name="input_price_hint">Giá</string>
    <string name="input_expired_at_hint">Ngày hết hạn</string>
    <string name="input_content_hint">Nội dung</string>
    <string name="created_at">Ngày đăng:</string>
    <string name="expired_at">Ngày hết hạn:</string>
    <string name="email">Email:</string>
    <string name="phone">Số điện thoại:</string>
    <string name="tap_to_change">Thay đổi thông tin</string>
    <string name="publish">Đăng</string>
    <string name="all">Tất cả</string>
    <string name="need_to_buy">Cần mua</string>
    <string name="need_to_sell">Cần bán</string>
    <string name="single">Cá nhân</string>
    <string name="business">Doanh nghiệp</string>
	<string name="input_quantity_hint">Sản lượng</string>
    <string name="or">hoặc</string>
    <string name="input_name_hint">Tên đăng nhập</string>
    <string name="input_pass_hint">Mật khẩu</string>
    <string name="input_submit_pass_hint">Nhập lại Mật khẩu</string>
    <string name="input_email_hint">Email</string>
    <string name="input_fullname_hint">Họ và tên</string>
    <string name="input_address_hint">Địa chỉ</string>
    <string name="input_phone_hint">Số điện thoại</string>
    <string name="exit">Nhấn back thêm 1 lần nữa để thoát</string>
    <string name="sign_hint">Đăng kí để bắt đầu sử dụng Ứng dụng và nhận những <b>Ưu đãi</b> đặc biệt</string>
    <string name="search_history">Lịch sử Tìm kiếm</string>
    <string name="trick_fragment">Mẹo vặt</string>
    <string name="product_fragment">Sản phẩm</string>
    <string name="news_fragment">Tin tức</string>
    <string name="trading_fragment">Rao vặt</string>
    <string name="user_fragment">Tôi</string>
    <string name="trick1">Mẹo sản xuất</string>
    <string name="trick2">Mẹo chế biến</string>
    <string name="signup">Đăng kí</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string-array name="trick_spinner_array">
        <item>Tất cả</item>
        <item>Cần mua</item>
        <item>Cần bán</item>
    </string-array>
    <string name="test_new_title">Việt Nam có thể chiếm ngôi đầu về xuất khẩu chuối của Philippines</string>
    <string name="test_new_des">Truyền thông Philippines đưa tin Việt Nam và các nước sản xuất chuối khác ở khu vực châu Á có thể giành thị phần của Philippines - quốc gia xuất khẩu chuối tươi lớn nhất khu vực.</string>
    <string name="test_new_title_1">Mỹ giảm thuế chống bán phá giá tôm cho Việt Nam</string>
    <string name="test_new_des_1">Bộ Thương mại Mỹ (DOC) đã công bố kết quả cuối cùng rà soát hành chính lần thứ 9 (POR9) thuế chống bán phá giá tôm đông lạnh nhập khẩu từ Việt Nam với mức thuế trung bình là 0,91%, thấp hơn 0,02 điểm phần trăm so với mức trung bình của lần công bố kết quả sơ bộ vào tháng 3-2015, theo Hiệp hội chế biến và xuất khẩu thủy sản Việt Nam (Vasep).</string>
    <string name="test_product_title_1">Gạo Nàng thơm chợ Đào</string>
    <string name="test_product_address_1">Tiền Giang</string>
    <string name="test_product_title_2">Xoài cát thường</string>
    <string name="test_product_address_2">Hà Nội</string>
    <string name="test_product_title_3">Bưởi Năm Roi loại 1</string>
    <string name="test_product_price_1">quả</string>
     <string name="test_trick_title_1">Mô hình nuôi cá Lóc nuôi vèo giúp làm giàu</string>
     <string name="test_trick_content_2">Anh Nguyễn Văn Dũng ở ấp Bình Thanh, xã Hoà Nghĩa có thu nhập hàng năm khoảng 150 triệu đồng từ 190 gốc bưởi da xanh. Anh đạt danh hiệu nông dân sản xuất giỏi cấp huyện năm 2010. Mới đây, Viện Nghiên cứu cây ăn quả Miền Nam và cơ quan cấp giấy chứng nhận VietGAP tiến hành kiểm tra thẩm định và đánh giá đạt yêu cầu đối với quy trình sản xuất theo tiêu chuẩn Viet GAP trên vườn bưởi da xanh của anh Dũng – Từ 40 nhánh bưởi da xanh ban đầu, anh trồng xen với măng cụt và nhãn tiêu Huế, sau thời gian chăm sóc và thu hoạch trái, anh nhận thấy ưu điểm và hiệu quả kinh tế nổi trội của cây bưởi da xanh so với nhiều loại cây ăn trái khác, từ đó anh quyết định đốn bỏ cây mặt cụt và nhãn tiêu Huế để trồng chuyên canh bưởi da xanh trên diện tích 3.200m2 đất vườn. Để duy trì và nâng cao năng suất vườn bưởi, anh chủ động đốn bỏ những cây bưởi lâu năm đã suy kiệt thay thế bằng cây bưởi da xanh được trồng mới. Hiện tại, cây lớn nhất đã 13 năm và nhỏ nhất là 4 năm tuổi.

– Anh cho biết, bưởi da xanh trồng khoảng 3-4 năm sẽ cho trái chiến, từ năm thu hoạch thứ 2 trở đi cây cho trái ổn định. Nếu canh tác theo đúng kỹ thuật, cây sẽ cho năng suất rất cao. Thị trường tiêu thụ ổn định, sức mua khá mạnh đã đưa giá trị trái bưởi da xanh lên vị trí hàng đầu trong nhóm các loại cây ăn trái có giá kinh kinh tế cao hiện nay. Thời gian qua, giá bưởi da xanh thường dao động ở mức từ 23.000-27.000đ/kg đối với loại 1. Với sản lượng thu hoạch khoảng 500kg, mỗi tháng đem về thu nhập cho anh hơn 12,5 triệu đồng – thu nhập đáng mơ ước đối với nông dân.

– Anh Dũng là thành viên của tổ hợp tác sản xuất bưởi da xanh theo tiêu chuẩn VietGAP xã Hoà Nghĩa, là tổ hợp tác sản xuất bưởi da xanh theo tiêu chuẩn VietGAP đầu tiên ở huyện Chợ Lách, tổ có 19 thành viên, được phát triển từ tổ liên kết sản xuất bưởi da xanh theo hướng GAP. Tham gia tổ hợp tác, anh Dũng đã được Viện Nghiên cứu cây ăn quả Miền Nam và Phòng Nông nghiệp huyện hướng dẫn sản xuất bưởi da xanh theo quy trình VietGAP, với nhiều hạng mục và chỉ tiêu khác nhau. Anh Dũng lý giải, khó nhất là việc ghi chép nhật ký sử dụng phân bón, điều này đã làm thay đổi tập quán canh tác trước đây của anh nói riêng và nông dân nói chung. Ngày tháng sử dụng, loại, liều lượng phân bón, phương pháp bón phân đều phải ghi chép rõ ràng.

– Để tránh lãng phí, anh chỉ sử dụng phân bón vô cơ khi cần thiết và bón đủ cho mỗi lần bón. Anh thường sử dụng 20-20-15 để bổ sung dinh dưỡng cho cây, tuỳ vào quá trình sinh trưởng và tuổi của cây mà bón với liều lượng và vào thời điểm phù hợp. Bên cạnh sử dụng phân vi sinh bón 4 lần trong năm, mỗi lần bón liều lượng 1-4kg/gốc. Anh ít khi sử dụng thuốc bảo vệ thực vật, nếu có, anh chỉ sử dụng các loại thuốc bảo vệ thực vật chuyên dụng đã được đăng ký, chú trọng việc áp dụng các biện pháp quản lý dịch hại tổng hợp (IPM), quản lý cây trồng tổng hợp (ICM) mà anh đã được tham gia tập huấn. Ngoài ra, anh còn đầu tư xây dựng kho chứa hoá chất ở nơi thoáng mát, an toàn theo quy định.

– Sau gần 2 năm sản xuất theo tiêu chuẩn VietGAP, hiệu quả bước đầu đã được ghi nhận: “môi trường sản xuất an toàn hơn, sản phẩm không để lại dư lượng thuốc trừ sâu, bảo đảm chất lượng và sức khoẻ người tiêu dùng”. Đặc biệt, sau khi đạt được chứng nhận VietGAP, cơ sở Hương Miền Tây cam kết thu mua giá cao hơn 20% so với giá của thị trường, mở ra một hướng đi mới đầy triển vọng không riêng cho anh Dũng mà còn cho những thành viên của tổ hợp tác bưởi da xanh theo tiêu chuẩn VietGAP xã Hoà Nghĩa.

Nguồn: Trung tâm Khuyến nông Bến Tre</string>
    <string name="test_trick_title_2">Làm giàu từ mô hình trồng Bưởi da xanh</string>
</resources>