<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:isScrollContainer="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/user_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/sign_hint"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_larger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@xml/input_bg_onselected"
                    android:ems="10"
                    android:hint="@string/input_name_hint"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_disable"
                    android:textSize="@dimen/text_medium" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@xml/input_bg"
                    android:ems="10"
                    android:hint="@string/input_pass_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_disable"
                    android:textSize="@dimen/text_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:gravity="bottom"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@xml/signup"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/secondary_action_bar"
                        android:textSize="@dimen/text_medium" />

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@xml/signin"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/list_background"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/loggedin_layout"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/logout_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@xml/trick_listview_bg"
            android:clickable="true"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="8dp"
                android:src="@drawable/ic_exit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_larger" />
        </FrameLayout>
    </LinearLayout>

</ScrollView>